order dialog fixes + loading spinner  - fixed order dialog overflow  - renamed loading-dialog to progress dialog  - added an actual laoding dialog spinner that does not show progress  - loading spinner now gets used for user design upload since we can't obtain progress information from that

--- a/src/main/resources/static/front/style.css
+++ b/src/main/resources/static/front/style.css
@@ -832,10 +832,10 @@ input[type="submit"]:not(:disabled):active {
   border-top: solid black 1px;
 }
 
-#loading-dialog .dialog-body {
+#progress-dialog .dialog-body {
   text-align: center;
 }
-#loading-prog {
+#progress-prog {
   display: inline-block;
 }
 
@@ -894,4 +894,40 @@ input[type="submit"]:not(:disabled):active {
   position: absolute;
   top: 4px;
   right: 4px;
+}
+
+#lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+#lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: gray transparent transparent transparent;
+}
+#lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+#lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+#lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
